--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,6 @@ analyzer:
   exclude:
     # Prevents extra work during some e2e test runs.
     - "dart2js_test/**"
-    # Common top level directories containing generated files in any package.
-    - "build/**"
     - ".dart_tool/**"
+  plugins:
+    - build
