--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,7 +9,10 @@ dependencies:
   build: ^2.0.0
   # Not imported in code, but used to constrain `build.yaml` requirements
   build_config: ^1.0.0
+  json_annotation:
 
 dev_dependencies:
   build_runner: ^2.0.0
   build_web_compilers: ^4.0.0
+  json_serializable:
+  web:
