--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ workspace:
 - _test/pkgs/provides_builder
 - _test_common
 - build
+# Plugins can't be in a workspace
 # - build/tools/analyzer_plugin
 - build_config
 - build_daemon
@@ -26,3 +27,5 @@ workspace:
 - build_modules/test/fixtures/b
 - build_web_compilers/test/fixtures/c
 - build_web_compilers/test/fixtures/d
+- plugin_torture_test
+- plugin_torture_test/tool/benchmark_generator
